--- a/style.css
+++ b/style.css
@@ -1,18 +1,45 @@
-body{
+
+.content{
+    display: flex;
+    justify-content:space-around;
+}
+
+header{
+    
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content:space-between;
+    margin-left: 50px;
+    margin-right: 350px;
+    height: 500px;
+    
 }
-.header{
-    margin-bottom: 50px;
 
+.buttons {
+    display: flex;
+    flex-direction: column;
 }
-#grid-container{
+
+.buttons button {
+    padding: 10px 20px;
+    margin: 5px;
+    background-color: rgb(26, 142, 177);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.buttons button:hover {
+    background-color: rgb(3, 94, 136); 
+}
+
+#grid-container {
     display: flex;
     width: 800px;
     height: 800px;
 }
-
 
 .cell {
     border: 1px solid black;
